# dev_tool

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  todolist.md  tsconfig.json  tsconfig.node.json  unocss.config.ts  vite.config.ts  vitest.config.ts  具体落地方案.md  项目结构设计方案.md  项目需求说明书（v0.1）.md
src/: App.css  App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: base64.rs  config.rs  encoding.rs  json_fmt.rs  mod.rs  random.rs  timestamp.rs  url.rs
src-tauri/src/hotkey/: manager.rs
src-tauri/src/plugin_loader/: mod.rs  registry.rs  sandbox.rs  scanner.rs
src-tauri/src/window/: mod.rs  multi_monitor.rs
src/components/: CopyButton.tsx  InputArea.tsx  OutputArea.tsx  TabBar.tsx  Toast.tsx
src/modules/base64/: Base64Panel.tsx
src/modules/encoding/: EncodingPanel.tsx
src/modules/json/: JsonPanel.tsx
src/modules/random/: RandomPanel.tsx
src/modules/timestamp/: TimestampPanel.tsx
src/modules/url/: UrlPanel.tsx
src/plugin/: PluginSlot.tsx  sdk.ts
