[package]
name = "dev-tool"
version = "0.1.0"
description = "Windows desktop lightweight dev utility tool"
authors = ["you"]
edition = "2021"

[lib]
name = "dev_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-positioner = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"
percent-encoding = "2"
base64 = "0.22"
